[gd_scene load_steps=13 format=2]

[ext_resource path="res://objects/boss_fsm/scripts/fsm.gd" type="Script" id=1]
[ext_resource path="res://objects/boss_fsm/scripts/enemy.gd" type="Script" id=2]
[ext_resource path="res://objects/boss_fsm/anim.tscn" type="PackedScene" id=3]
[ext_resource path="res://objects/boss_fsm/scripts/idle.gd" type="Script" id=4]
[ext_resource path="res://objects/boss_fsm/scripts/jump_attack.gd" type="Script" id=5]
[ext_resource path="res://objects/boss_fsm/scripts/run_attack.gd" type="Script" id=6]
[ext_resource path="res://objects/boss_fsm/scripts/die.gd" type="Script" id=7]
[ext_resource path="res://objects/boss_fsm/scripts/template.gd" type="Script" id=8]
[ext_resource path="res://objects/boss_fsm/scripts/attack_others.gd" type="Script" id=9]
[ext_resource path="res://objects/boss_fsm/scripts/ai.gd" type="Script" id=10]

[sub_resource type="CapsuleShape2D" id=1]
radius = 34.138

[sub_resource type="RectangleShape2D" id=2]
extents = Vector2( 26.6213, 36.5121 )

[node name="boss" type="KinematicBody2D"]
collision_layer = 4
script = ExtResource( 2 )

[node name="anim" parent="." instance=ExtResource( 3 )]
position = Vector2( 8, 0 )

[node name="collider" type="CollisionShape2D" parent="."]
shape = SubResource( 1 )

[node name="ai" type="Node" parent="."]
script = ExtResource( 10 )

[node name="ai_timer" type="Timer" parent="ai"]

[node name="fsm" type="Node" parent="."]
script = ExtResource( 1 )

[node name="idle" type="Node" parent="fsm"]
script = ExtResource( 4 )

[node name="jump_attack" type="Node" parent="fsm"]
script = ExtResource( 5 )
duration = 3

[node name="run_attack" type="Node" parent="fsm"]
script = ExtResource( 6 )

[node name="die" type="Node" parent="fsm"]
script = ExtResource( 7 )

[node name="template" type="Node" parent="fsm"]
script = ExtResource( 8 )

[node name="label" type="Label" parent="."]
margin_left = -40.4543
margin_top = -69.6713
margin_right = -0.454285
margin_bottom = -55.6713
__meta__ = {
"_edit_use_anchors_": false
}

[node name="down" type="RayCast2D" parent="."]
position = Vector2( -0.44545, 34.9678 )
enabled = true
cast_to = Vector2( 0, 25 )

[node name="left" type="RayCast2D" parent="."]
position = Vector2( -28.0633, 0 )
enabled = true
cast_to = Vector2( -25, 0 )

[node name="right" type="RayCast2D" parent="."]
position = Vector2( 22.9406, 0.222725 )
enabled = true
cast_to = Vector2( 25, 0 )

[node name="attack_others" type="Area2D" parent="."]
script = ExtResource( 9 )

[node name="attack_others" type="CollisionShape2D" parent="attack_others"]
position = Vector2( -21.3575, -0.33371 )
shape = SubResource( 2 )

[connection signal="timeout" from="ai/ai_timer" to="ai" method="_on_ai_timer_timeout"]
[connection signal="body_entered" from="attack_others" to="attack_others" method="_on_attack_others_body_entered"]
